--- a/boolean-operators.html
+++ b/boolean-operators.html
@@ -19,7 +19,7 @@
 
                     <p>"String"</p>
 
-                    <button type="button" onclick="strReturnsTrue()" style="display: block;">Will this string ruturn true or false?</button>
+                    <button type="button" onclick="strReturnsTrue()">Will this string ruturn true or false?</button>
                     <br>
                     <p id="display-boolean-state"></p>
 
